--- a/packages/cdk-blue-green-container-deployment/package.json
+++ b/packages/cdk-blue-green-container-deployment/package.json
@@ -61,28 +61,28 @@
     }
   },
   "peerDependencies": {
-    "@aws-cdk/aws-codebuild": "^1.102.0",
-    "@aws-cdk/aws-codedeploy": "^1.102.0",
-    "@aws-cdk/aws-ec2": "^1.102.0",
-    "@aws-cdk/aws-ecr": "^1.102.0",
-    "@aws-cdk/aws-ecs": "^1.102.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.102.0",
-    "@aws-cdk/aws-iam": "^1.102.0",
-    "@aws-cdk/core": "^1.102.0",
+    "@aws-cdk/aws-codebuild": "^1.101.0",
+    "@aws-cdk/aws-codedeploy": "^1.101.0",
+    "@aws-cdk/aws-ec2": "^1.101.0",
+    "@aws-cdk/aws-ecr": "^1.101.0",
+    "@aws-cdk/aws-ecs": "^1.101.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.101.0",
+    "@aws-cdk/aws-iam": "^1.101.0",
+    "@aws-cdk/core": "^1.101.0",
     "constructs": "^3.2.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-codebuild": "^1.102.0",
-    "@aws-cdk/aws-codedeploy": "^1.102.0",
-    "@aws-cdk/aws-ec2": "^1.102.0",
-    "@aws-cdk/aws-ecr": "^1.102.0",
-    "@aws-cdk/aws-ecs": "^1.102.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.102.0",
-    "@aws-cdk/aws-iam": "^1.102.0",
-    "@aws-cdk/core": "^1.102.0"
+    "@aws-cdk/aws-codebuild": "1.101.0",
+    "@aws-cdk/aws-codedeploy": "1.101.0",
+    "@aws-cdk/aws-ec2": "1.101.0",
+    "@aws-cdk/aws-ecr": "1.101.0",
+    "@aws-cdk/aws-ecs": "1.101.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "1.101.0",
+    "@aws-cdk/aws-iam": "1.101.0",
+    "@aws-cdk/core": "1.101.0"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.102.0",
+    "@aws-cdk/assert": "1.101.0",
     "aws-sdk": "^2.903.0",
     "jest-cdk-snapshot": "^1.4.1"
   },
