--- a/packages/cdk-codepipeline-slack/package.json
+++ b/packages/cdk-codepipeline-slack/package.json
@@ -66,36 +66,36 @@
     "@types/aws-serverless-express/@types/aws-lambda": "^8.10.67"
   },
   "peerDependencies": {
-    "@aws-cdk/aws-apigateway": "^1.102.0",
-    "@aws-cdk/aws-codebuild": "^1.102.0",
-    "@aws-cdk/aws-codepipeline": "^1.102.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.102.0",
-    "@aws-cdk/aws-events": "^1.102.0",
-    "@aws-cdk/aws-events-targets": "^1.102.0",
-    "@aws-cdk/aws-iam": "^1.102.0",
-    "@aws-cdk/aws-lambda": "^1.102.0",
-    "@aws-cdk/aws-s3": "^1.102.0",
-    "@aws-cdk/aws-sns": "^1.102.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.102.0",
-    "@aws-cdk/core": "^1.102.0",
+    "@aws-cdk/aws-apigateway": "^1.101.0",
+    "@aws-cdk/aws-codebuild": "^1.101.0",
+    "@aws-cdk/aws-codepipeline": "^1.101.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.101.0",
+    "@aws-cdk/aws-events": "^1.101.0",
+    "@aws-cdk/aws-events-targets": "^1.101.0",
+    "@aws-cdk/aws-iam": "^1.101.0",
+    "@aws-cdk/aws-lambda": "^1.101.0",
+    "@aws-cdk/aws-s3": "^1.101.0",
+    "@aws-cdk/aws-sns": "^1.101.0",
+    "@aws-cdk/aws-sns-subscriptions": "^1.101.0",
+    "@aws-cdk/core": "^1.101.0",
     "constructs": "^3.2.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.102.0",
-    "@aws-cdk/aws-codebuild": "^1.102.0",
-    "@aws-cdk/aws-codepipeline": "^1.102.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.102.0",
-    "@aws-cdk/aws-events": "^1.102.0",
-    "@aws-cdk/aws-events-targets": "^1.102.0",
-    "@aws-cdk/aws-iam": "^1.102.0",
-    "@aws-cdk/aws-lambda": "^1.102.0",
-    "@aws-cdk/aws-s3": "^1.102.0",
-    "@aws-cdk/aws-sns": "^1.102.0",
-    "@aws-cdk/aws-sns-subscriptions": "^1.102.0",
-    "@aws-cdk/core": "^1.102.0"
+    "@aws-cdk/aws-apigateway": "1.101.0",
+    "@aws-cdk/aws-codebuild": "1.101.0",
+    "@aws-cdk/aws-codepipeline": "1.101.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.101.0",
+    "@aws-cdk/aws-events": "1.101.0",
+    "@aws-cdk/aws-events-targets": "1.101.0",
+    "@aws-cdk/aws-iam": "1.101.0",
+    "@aws-cdk/aws-lambda": "1.101.0",
+    "@aws-cdk/aws-s3": "1.101.0",
+    "@aws-cdk/aws-sns": "1.101.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.101.0",
+    "@aws-cdk/core": "1.101.0"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.102.0",
+    "@aws-cdk/assert": "1.101.0",
     "@slack/interactive-messages": "^1.7.1",
     "@slack/web-api": "^5.15.0",
     "@types/aws-serverless-express": "^3.3.3",
