--- a/packages/cdk-lambda-at-edge-pattern/package.json
+++ b/packages/cdk-lambda-at-edge-pattern/package.json
@@ -59,24 +59,24 @@
     }
   },
   "peerDependencies": {
-    "@aws-cdk/aws-cloudfront": "^1.102.0",
-    "@aws-cdk/aws-iam": "^1.102.0",
-    "@aws-cdk/aws-lambda": "^1.102.0",
-    "@aws-cdk/aws-ssm": "^1.102.0",
-    "@aws-cdk/core": "^1.102.0",
-    "@aws-cdk/custom-resources": "^1.102.0",
+    "@aws-cdk/aws-cloudfront": "^1.101.0",
+    "@aws-cdk/aws-iam": "^1.101.0",
+    "@aws-cdk/aws-lambda": "^1.101.0",
+    "@aws-cdk/aws-ssm": "^1.101.0",
+    "@aws-cdk/core": "^1.101.0",
+    "@aws-cdk/custom-resources": "^1.101.0",
     "constructs": "^3.2.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-cloudfront": "^1.102.0",
-    "@aws-cdk/aws-iam": "^1.102.0",
-    "@aws-cdk/aws-lambda": "^1.102.0",
-    "@aws-cdk/aws-ssm": "^1.102.0",
-    "@aws-cdk/core": "^1.102.0",
-    "@aws-cdk/custom-resources": "^1.102.0"
+    "@aws-cdk/aws-cloudfront": "1.101.0",
+    "@aws-cdk/aws-iam": "1.101.0",
+    "@aws-cdk/aws-lambda": "1.101.0",
+    "@aws-cdk/aws-ssm": "1.101.0",
+    "@aws-cdk/core": "1.101.0",
+    "@aws-cdk/custom-resources": "1.101.0"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.102.0",
+    "@aws-cdk/assert": "1.101.0",
     "@types/adm-zip": "^0.4.34",
     "adm-zip": "^0.5.5",
     "aws-local-testing-library": "^0.0.7",
